--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,8 +50,43 @@ jobs:
           name: lavina-${{ matrix.suffix }}
           path: dist/lavina-${{ matrix.suffix }}.tar.gz
 
+  build-windows:
+    runs-on: windows-latest
+    continue-on-error: true
+    defaults:
+      run:
+        shell: msys2 {0}
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: msys2/setup-msys2@v2
+        with:
+          msystem: UCRT64
+          install: mingw-w64-ucrt-x86_64-gcc make diffutils zip
+
+      - name: Bootstrap
+        run: make bootstrap
+
+      - name: Test
+        run: make test
+
+      - name: Build
+        run: make build && make lvpkg
+
+      - name: Package
+        run: |
+          mkdir -p dist
+          cd build && zip ../dist/lavina-windows-x86_64.zip lavina.exe lvpkg.exe
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: lavina-windows-x86_64
+          path: dist/lavina-windows-x86_64.zip
+
   release:
-    needs: build
+    needs: [build, build-windows]
+    if: always() && needs.build.result == 'success'
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
