--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,12 +19,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install g++ (Linux)
+      - name: Setup g++ (Linux)
         if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y g++-14
-          sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-14 100
+        run: sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-14 100
 
       - name: Bootstrap
         run: make bootstrap
